# relight

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RELIGHT_VERSION  cmake_install.cmake  demo-img.html  demo-lib.html  demo.html  hammer.min.js  mdemo.html  mrelight.js  onebyone.sh  relight-shaders.js  relight-viewer.js  relight-viewer.min.js  relight.css  relight.js  relight.min.js  relight.pro  relightsingleres.js  snapcraft.yaml  uglify.sh  windows_compile.txt
align/: CMakeLists.txt  align.pro  aligndialog.cpp  aligndialog.h  aligndialog.ui  aligninspector.cpp  aligninspector.h  aligninspector.ui  imagealignment.cpp  imagealignment.h  main.cpp
brdflab/: CMakeLists.txt  brdflab.pro  diagnosticpanel.cpp  diagnosticpanel.h  main.cpp  mainwindow.cpp  mainwindow.h  normalspherewidget.cpp  normalspherewidget.h  reflectanceview.cpp  reflectanceview.h  rusinview.cpp  rusinview.h
calibrate/: calibrate.pro  main.cpp
cmake/: FindLCMS2.cmake  relight_tools.cmake
css/: relight.css
deepzoom/: deepzoom.pro  main.cpp
demo/: index.html  info.json  openlime.js  openlime.min.js  plane_0.tzi  plane_1.tzi  plane_2.tzi  plane_3.tzi  plane_4.tzi  plane_5.tzi  skin.css
deploy/: relightlab.icns
depthmap/: camera.cpp  camera.h  depthmap.cpp  depthmap.h  depthmap.pro  gaussiangrid.cpp  gaussiangrid.h  main.cpp  orthodepthmap.cpp  orthodepthmap.h
highlight/: CMakeLists.txt  ball.cpp  ball.h  ballpickerdialog.cpp  ballpickerdialog.h  ballpickerdialog.ui  ballwidget.cpp  ballwidget.h  ballwidget.ui  graphics_view_zoom.cpp  graphics_view_zoom.h  helpdialog.cpp  highlight.pro  icons.qrc  imagecropper.cpp  imagecropper.h  imagecropper_p.h  imagedialog.cpp  imagedialog.h  imagedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  progress.cpp  progress.h  progress.ui  rtiexport.cpp  rtiexport.h  rtiexport.ui
js/: hammer.js  hammer.min.js  relight-canvas.js  relight-core.js  relight-interface.js  relight-shaders.js  relight-viewer.min.js  relight.min.js  uglify.sh
normal_integration/: main.cpp  normal_integration.pro
relight/: CMakeLists.txt  align.cpp  align.h  aligndialog.cpp  aligndialog.h  aligndialog.ui  ball.cpp  ball.h  cmake_install.cmake  convertdialog.cpp  convertdialog.h  convertdialog.ui  dome.cpp  dome.h  domecalibration.cpp  domecalibration.h  domecalibration.ui  dstretch.h  dstretchdialog.cpp  dstretchdialog.h  dstretchdialog.ui  dstretchtask.cpp  dstretchtask.h  focaldialog.cpp  focaldialog.h  focaldialog.ui  graphics_view_zoom.cpp  graphics_view_zoom.h  helpdialog.h  helpdialog.ui  history.cpp  history.h  httpserver.cpp  httpserver.h  icons.qrc  image.cpp  image.h  imagecropper.cpp  imagecropper.h  lens.cpp  (+62 more)
relight-cli/: .qmake.stash  CMakeLists.txt  cmake_install.cmake  convert_rti.cpp  main.cpp  relight-cli.pro  rtibuilder.cpp  rtibuilder.h
relight-deepzoom/: CMakeLists.txt  main.cpp  relight-deepzoom.pro
relight-gui/: PLAN.txt  mainwindow.h  relight-gui.pro
relight-merge/: CMakeLists.txt  cmake_install.cmake  main.cpp  relight-merge.pro
relight-merge/relight-merge_autogen/: moc_predefs.h
relight-normals/: CMakeLists.txt  main.cpp  main_old.cpp  relight-normals.pro
relight-pano/: exiftransplant.cpp  exiftransplant.h  main.cpp  mainwindow.cpp  orixml.cpp  orixml.h  panobuilder.cpp  (+3 more)
relight/darkorange/: stylesheet.txt
relight/docs/: help.html
relight/release/: moc_predefs.h
relight/relight_autogen/: moc_predefs.h  mocs_compilation.cpp
relight/relight_autogen/EWIEGA46WW/: moc_aligndialog.cpp.d  moc_convertdialog.cpp.d  moc_domecalibration.cpp.d  moc_dstretchdialog.cpp.d  moc_focaldialog.cpp.d  moc_graphics_view_zoom.cpp.d  moc_helpdialog.cpp.d  moc_imagecropper.cpp.d  moc_mainwindow.cpp.d  moc_processqueue.cpp.d  moc_qalignmarker.cpp.d  moc_qmarker.cpp.d  moc_qmarkerlist.cpp.d  moc_qmeasuremarker.cpp.d  moc_qspheremarker.cpp.d  moc_queueitem.cpp.d  moc_queuewindow.cpp.d  moc_rtiexport.cpp.d  moc_rtitask.cpp.d  moc_script.cpp.d  moc_settingsdialog.cpp.d  moc_task.cpp.d  moc_zoomdialog.cpp.d
relightlab/: CMakeLists.txt  ROADMAP.txt  actions.cpp  actions.h  alignframe.cpp  alignframe.h  alignpicking.cpp  alignpicking.h  alignrow.cpp  alignrow.h  brdfframe.cpp  brdfframe.h  brdfplan.cpp  brdfplan.h  brdftask.cpp  brdftask.h  calibration.md  canvas.cpp  canvas.h  convertdialog.cpp  convertdialog.h  creatertidialog.cpp  creatertidialog.h  cropframe.cpp  cropframe.h  directionsview.cpp  directionsview.h  domeframe.cpp  domeframe.h  domepanel.cpp  domepanel.h  flowlayout.cpp  flowlayout.h  form.ui  helpbutton.cpp  helpbutton.h  historytask.cpp  historytask.h  homeframe.cpp  homeframe.h  (+94 more)
relightlab/calibration/: caldistortionframe.cpp  caldistortionframe.h  caldomeframe.cpp  caldomeframe.h  calflatfieldframe.cpp  calflatfieldframe.h  calhistogramframe.cpp  calhistogramframe.h  calibrationdialog.cpp  calibrationdialog.h  calimagesframe.cpp  calimagesframe.h  callightsframe.cpp  callightsframe.h  gridcalibview.cpp  gridcalibview.h
relightlab/css/: style.qss  style.txt
relightlab/docs/: about.html  about.md  docs.txt  gettingstarted.html  gettingstarted.md  home.html  home.md  home.txt  index.html  index.md  publishing.html  readme.md  style.css
relightlab/docs/brdf/: index.html  median.html
relightlab/docs/formats/: config.html  config.md  dome.md  general.md  iiif.md  index.html  legacy.html  lp.html  project.html  relight.md  web.md
relightlab/docs/interface/: align.html  convert.html  crop.html  domes.html  general.html  geometry.md  home.html  image_list.html  index.html  lights.html  measurements.md  new_project.html  new_project.md  open_project.md  queue.md  scale.html  spheres.html  view.html
relightlab/docs/normals/: export.md  flattening.html  flattening.md  index.html  normalmap.html  surface.html
relightlab/docs/rti/: basis.html  coefficients.html  coefficients.md  colorspace.html  export.html  format.html  index.html  quality.html  web.html
relightlab/icons/: light2dark.sh
relightlab/icons/dark/: index.theme
relightlab/icons/dark/scalable/: rotate-ccw  rotate-cw
relightlab/icons/light/: index.theme
(+201 files in other folders)
